// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header component should shallow with a gif array 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <GifGrid
    gifs={
        Array [
            Object {
              "id": "3",
              "images": Object {
                "downsized": Object {
                  "url": "abc.gif",
                },
              },
              "title": "gif",
            },
          ]
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        Array [
          <Connect(Component)
            id="3"
            images={
                        Object {
                                    "downsized": Object {
                                      "url": "abc.gif",
                                    },
                                  }
            }
            title="gif"
/>,
        ],
        false,
      ],
      "className": "mt",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": "3",
        "nodeType": "class",
        "props": Object {
          "id": "3",
          "images": Object {
            "downsized": Object {
              "url": "abc.gif",
            },
          },
          "title": "gif",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      false,
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          Array [
            <Connect(Component)
              id="3"
              images={
                            Object {
                                          "downsized": Object {
                                            "url": "abc.gif",
                                          },
                                        }
              }
              title="gif"
/>,
          ],
          false,
        ],
        "className": "mt",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "3",
          "nodeType": "class",
          "props": Object {
            "id": "3",
            "images": Object {
              "downsized": Object {
                "url": "abc.gif",
              },
            },
            "title": "gif",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        false,
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Header component should shallow with no gifs 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <GifGrid
    gifs={Array []}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        Array [],
        <p>
          Search for something
</p>,
      ],
      "className": "mt",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Search for something",
        },
        "ref": null,
        "rendered": "Search for something",
        "type": "p",
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          Array [],
          <p>
            Search for something
</p>,
        ],
        "className": "mt",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Search for something",
          },
          "ref": null,
          "rendered": "Search for something",
          "type": "p",
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
